force-app/main/default/objects/pse__Timecard_Header__c/pse__Timecard_Header__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TimecardHelp</customHelpPage>
    <description>Records the hours and days worked by a resource in a given week. Timecards are associated with a project and may also be logged against an assignment or milestone, or against one or more project tasks. Resources can submit multiple timecards on the Timecard Entry page, accessed by clicking either “Log a Timecard - New UI” or “Log a Timecard with Task Time” on the PSA Links sidebar (depending on whether your organization logs time against project tasks). This object is named Timecard_Header (API name pse__Timecard_Header__c) and has a master-detail relationship with timecard splits.</description>
    <label>Timecard</label>
    <nameField>
        <displayFormat>TCH-{MM}-{DD}-{YYYY}-{000000}</displayFormat>
        <label>Timecard Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>