force-app/main/default/objects/pse__Timecard_Header__c/fields/CT_Hours_x_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Hours_x_Bill_Rate__c</fullName>
    <formula>IF(pse__Assignment__r.pse__Suggested_Bill_Rate_Number__c &gt; 0, pse__Total_Hours__c *  pse__Assignment__r.pse__Suggested_Bill_Rate_Number__c, pse__Total_Hours__c *     CT_Suggested_Bill_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Hours * Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>