force-app/main/default/objects/pse__Timecard_Header__c/fields/CT_Suggested_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Suggested_Bill_Rate__c</fullName>
    <label>Suggested Bill Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>