force-app/main/default/objects/pse__Timecard_Header__c/fields/Out_of_Scope__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Scope</label>
    <type>Checkbox</type>
</CustomField>