force-app/main/default/objects/pse__Timecard_Header__c/validationRules/No_Assignment_and_No_Milestone.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Assignment_and_No_Milestone</fullName>
    <active>true</active>
    <description>No Assignment and No Milestone</description>
    <errorConditionFormula>AND(pse__Project__r.pse__Allow_Timecards_Without_Assignment__c == TRUE,  pse__Project__r.pse__Is_Billable__c == TRUE,  (OR(pse__Milestone__c ==&apos;&apos;, ISNULL(pse__Milestone__c))))</errorConditionFormula>
    <errorMessage>Timecard must have a Milestone</errorMessage>
</ValidationRule>